--- a/Exam3/Huerta/vehiculos/src/app/home/home.page.html
+++ b/Exam3/Huerta/vehiculos/src/app/home/home.page.html
@@ -1,14 +1,36 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color=secondary>
     <ion-title>
-      Ionic Blank
+      Buscar vehiculo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="5">
+          <ion-card >
+            <img src="/assets/DH7.png" alt="" />
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+      <ion-label>ID del vehiculo: </ion-label>
+      <ion-input type="text" placeholder = "01"></ion-input>
+      <button (click)="getUsersList()" routerDirection="root" class="btn__submit">BUSCAR</button>
+      <br>
+      <br>
+      <ion-list>
+          <ion-label>VEHICLE: </ion-label>
+          <br>
+          <ion-item *ngFor="let x of usersList;let i=index" >
+              <ion-label>
+                <h3>{{x.id}}</h3>
+                <p>{{x.brand}}</p>
+                <p>{{x.model}}</p>
+              </ion-label>
+            </ion-item>
+        </ion-list>
 </ion-content>
