--- a/Exam3/Huerta/vehiculos/src/app/home/home.page.scss
+++ b/Exam3/Huerta/vehiculos/src/app/home/home.page.scss
@@ -1,1 +1,29 @@
+ion-input{
+    background-color: rgb(242, 247, 244);
+	width: 80%;
+	padding: .5rem;
+	margin: .5rem 1.5rem;
+	border: none;
+	border-bottom: solid rgb(36, 18, 138) .2rem;
+	transition: all .5s;
+	border-radius: 5px;
+}
+ion-label{
+    margin: .5rem 1.5rem;
+}
+.btn__submit{
+	width: 70%;
+	padding: .5rem .5rem;
+	margin: .5rem 2.5rem;
+	border: none;
+	background-color: rgb(5, 126, 69);
+	border-bottom: solid rgb(5, 109, 40) .2rem;
+	color:rgb(247, 248, 247);
+	transition: all .5s;
+	border-radius: 5px;
+	
+}
 
+a{
+    margin: .5rem 2.5rem;
+}
