--- a/Exam3/Huerta/vehiculos/src/app/home/home.page.html
+++ b/Exam3/Huerta/vehiculos/src/app/home/home.page.html
@@ -27,9 +27,9 @@
           <br>
           <ion-item *ngFor="let x of vehicleList;let i=index" >
             <ion-label>
-              <h3>{{x.name.title}}. {{x.name.first}}</h3>
-              <p>{{x.email}}</p>
-              <p>{{x.registered.date}}</p>
+              <h3>{{x.id}}</h3>
+              <p>{{x.brand}}</p>
+              <p>{{x.model}}</p>
             </ion-label>
             </ion-item>
         </ion-list>
